Refactor ExchangeRateService to use ExchangeRateWrapper for JSON deserialization; add parse methods for improved response handling.

--- a/force-app/main/default/classes/ExchangeRateService.cls
+++ b/force-app/main/default/classes/ExchangeRateService.cls
@@ -16,7 +16,7 @@ public with sharing class ExchangeRateService {
         if (response.getStatusCode() == 200) {
             System.debug('Response: ' + response.getBody());
 
-            ExchangeRate exRate = (ExchangeRate) JSON.deserialize(response.getBody(), ExchangeRate.class);
+            ExchangeRateWrapper exRate = (ExchangeRateWrapper) JSON.deserialize(response.getBody(), ExchangeRateWrapper.class);
             System.debug(exRate);
             System.debug(exRate.result);
             for (String key : exRate.conversion_rates.keySet()) {
@@ -26,5 +26,46 @@ public with sharing class ExchangeRateService {
             System.debug('Callout failed: ' + response);
         }
     }
+
+    class ExchangeRateWrapper {
+        public String result;
+        public String documentation;
+        public String terms_of_use;
+        public Map<String,Decimal> conversion_rates;
+        public String myCurrency;
+
+        
+    }
+
+    public static ExchangeRateWrapper parse(String jsonResponse) {
+        
+        // Use JSON.deserialize to parse the response
+        ExchangeRateWrapper wrapper = (ExchangeRateWrapper)JSON.deserialize(
+            jsonResponse, 
+            ExchangeRateWrapper.class
+        );
+        Map<String, Object> result = (Map<String, Object>) JSON.deserializeUntyped(jsonResponse);
+
+        wrapper.myCurrency = (String) result.get('currency');
+
+        
+        return wrapper;
+    }
+
+    public static ExchangeRateWrapper parse(String jsonResponse) {
+        
+        // Use JSON.deserialize to parse the response
+        Map<String, Object> result = (Map<String, Object>) JSON.deserializeUntyped(jsonResponse);
+        ExchangeRateWrapper wrapper = new ExchangeRateWrapper();
+        wrapper.result = (String) result.get('result');
+        wrapper.documentation = (String) result.get('documentation');
+        wrapper.terms_of_use = (String) result.get('terms_of_use');
+        wrapper.conversion_rates = (Map<String, Decimal>) result.get('conversion_rates');
+        wrapper.myCurrency = (String) result.get('currency');
+
+        return wrapper;
+    }
+
+
 
 }
