--- a/force-app/main/default/classes/NewsAPIService.cls
+++ b/force-app/main/default/classes/NewsAPIService.cls
@@ -1,11 +1,15 @@
 public with sharing class NewsAPIService {
 
 
-    @future(callout=true)
-    public static void getTopHeadlines(List<Id> categoryIds){
+    // @future(callout=true)
+    // public static void getTopHeadlinesFuture(List<Id> categoryIds){
+    //     getTopHeadlines(categoryIds);
+    // }
+
+    public static void getTopHeadlines(List<Id> categoryIds, Integer page){
         List<Category__c> categories = [SELECT Name FROM Category__c WHERE Id IN :categoryIds];
         String namedCred = 'callout:NewsAPI'; // https://newsapi.org
-        String urlParth = '/v2/top-headlines?category='+ category;
+        String urlParth = '/v2/top-headlines?category='+ category + '&page=' + page;
         String endpoint = namedCred + urlParth;
         makeCallout(endpoint);
     }
@@ -21,10 +25,14 @@ public with sharing class NewsAPIService {
         HttpResponse res = http.send(req);
 
         NewsAPIResponse newsResponse = NewsAPIResponse.parse(res.getBody());
-        NewsAPIResponse.Article[] articles = newsResponse.articles;
-
+        NewsAPIResponse.Article[] articlesWrappers = newsResponse.articles;
         NewsAPIResponse.insertArticleFromResponse(articles);
 
+
+        for (NewsAPIResponse.Article article : articlesWrappers) {
+            String jsonArticle = JSON.serialize(article);
+        }
+
+
     }
-    
 }
