--- a/force-app/main/default/classes/NewsAPIService.cls
+++ b/force-app/main/default/classes/NewsAPIService.cls
@@ -1,21 +1,15 @@
 public with sharing class NewsAPIService {
 
-
-    // @future(callout=true)
-    // public static void getTopHeadlinesFuture(List<Id> categoryIds){
-    //     getTopHeadlines(categoryIds);
-    // }
-
-    public static void getTopHeadlines(List<Id> categoryIds, Integer page){
-        List<Category__c> categories = [SELECT Name FROM Category__c WHERE Id IN :categoryIds];
+    public static String getTopHeadlines(String category, Integer page){
         String namedCred = 'callout:NewsAPI'; // https://newsapi.org
         String urlParth = '/v2/top-headlines?category='+ category + '&page=' + page;
         String endpoint = namedCred + urlParth;
-        makeCallout(endpoint);
+        String responseBody = makeCallout(endpoint);
+        return responseBody;
     }
 
 
-    public static void makeCallout(String endpoint){
+    public static String makeCallout(String endpoint){
         
         HttpRequest req = new HttpRequest();
         req.setEndpoint(endpoint);
@@ -24,14 +18,7 @@ public with sharing class NewsAPIService {
         Http http = new Http();
         HttpResponse res = http.send(req);
 
-        NewsAPIResponse newsResponse = NewsAPIResponse.parse(res.getBody());
-        NewsAPIResponse.Article[] articlesWrappers = newsResponse.articles;
-        NewsAPIResponse.insertArticleFromResponse(articles);
-
-
-        for (NewsAPIResponse.Article article : articlesWrappers) {
-            String jsonArticle = JSON.serialize(article);
-        }
+        return res.getBody();
 
 
     }
